add sending emails to google script

--- a/index.html
+++ b/index.html
@@ -67,30 +67,30 @@
             Currently we are working on our new website. Subscribe to get ready for the grand day.
           </p>
 
-          <form class="bg-gray-900 opacity-75 w-full shadow-lg rounded-lg px-8 pt-6 pb-8 mb-4">
+          <form id="newsletterForm" class="bg-gray-900 opacity-75 w-full shadow-lg rounded-lg px-8 pt-6 pb-8 mb-4">
             <div class="mb-4">
               <label class="block text-blue-300 py-2 font-bold mb-2" for="emailaddress">
                 Subscribe to get notified!
               </label>
               <input
                 class="shadow appearance-none border rounded w-full p-3 text-gray-700 leading-tight focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
-                id="emailaddress"
-                type="text"
-                placeholder="Enter Your Email"
+                id="emailaddress" name="email" type="email" placeholder="Enter Your Email" required
               />
             </div>
 
             <div class="flex items-center justify-between pt-4">
               <button
                 class="bg-gradient-to-r from-purple-800 to-green-500 hover:from-pink-500 hover:to-green-500 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
-                type="button"
+                type="submit"
               >
                 Sign Up
               </button>
             </div>
           </form>
+          <div id="responseMessage"></div>
         </div>
       </div>
     </div>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
