--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
           <p class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left">
             Currently we are working on our new website. Subscribe to get ready for the grand day.
           </p>
-
-          <form id="newsletterForm" class="bg-gray-900 opacity-75 w-full shadow-lg rounded-lg px-8 pt-6 pb-8 mb-4">
+          <div class="bg-gray-900 opacity-75 w-full shadow-lg rounded-lg px-8 pt-6 pb-8 mb-4">
             <div class="mb-4">
               <label class="block text-blue-300 py-2 font-bold mb-2" for="emailaddress">
                 Subscribe to get notified!
@@ -81,12 +80,12 @@
             <div class="flex items-center justify-between pt-4">
               <button
                 class="bg-gradient-to-r from-purple-800 to-green-500 hover:from-pink-500 hover:to-green-500 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
-                type="submit"
+                type="button" id="button"
               >
                 Sign Up
               </button>
             </div>
-          </form>
+          </div>
           <div id="responseMessage"></div>
         </div>
       </div>
