added animated confirmation of sign-up

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </button>
             </div>
           </div>
-          <div id="responseMessage"></div>
+          <div id="responseMessage" class="bg-green-500 opacity-0 text-white flex justify-center py-3 px-5 mb-2 md:mb-4 rounded-lg fixed -bottom-16 left-1/2 transform -translate-x-1/2 transition-all duration-500"><span class="whitespace-nowrap">Subscribed! 🎉</span></div>
         </div>
       </div>
     </div>
