--- a/index.html
+++ b/index.html
@@ -2,21 +2,29 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Miami Paradise Studio - Coming Soon</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Miami Paradise Studio</title>
   <meta name="description" content="Miami Paradise Studio - Coming Soon">
   <meta name="keywords" content="Miami, Paradise, Studio, Coming Soon">
+  <meta property="og:title" content="Miami Paradise Studio - Coming Soon" />
+  <meta property="og:description" content="Our new website is coming soon. Subscribe to get notified!" />
+  <meta property="og:image" content="link_do_obrazka.jpg" />
+  <meta property="og:url" content="https://yourwebsite.com" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Miami Paradise Studio - Coming Soon" />
+  <meta name="twitter:description" content="Our new website is coming soon. Subscribe to get notified!" />
+  <meta name="twitter:image" content="link_do_obrazka.jpg" />
 
-  <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css">
-  <link href="https://unpkg.com/@tailwindcss/custom-forms/dist/custom-forms.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" />
+  <link href="https://unpkg.com/@tailwindcss/custom-forms/dist/custom-forms.min.css" rel="stylesheet" />
 
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
     html {
-      font-family: "Poppins", sans-serif;
+      font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     }
 
     body {
@@ -26,35 +34,52 @@
       background-color: rgba(0, 0, 0, 0.7);
       background-blend-mode: overlay;
       color: #e2e8f0;
-      margin: 0;
-      padding: 0;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+
+    /* Sunset Beach */
+    .gradient-text-sunset {
+      background: linear-gradient(90deg, #FFC600, #FF6E6A, #FD6E6A);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .subscribe-input {
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .subscribe-btn {
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .subscribe-btn:hover,
+    .subscribe-input:hover {
+      transform: scale(1.05);
     }
   </style>
 </head>
 
 <body class="leading-normal tracking-normal text-indigo-400 m-6">
-  <header>
-    <nav class="w-full container mx-auto">
+  <div class="h-full">
+    <!--Nav-->
+    <div class="w-full container mx-auto">
       <div class="w-full flex items-center justify-between">
         <a class="flex sm:items-center text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl flex-col sm:block"
           href="#">
-          <span
-            class="bg-clip-text text-transparent bg-gradient-to-r from-yellow-400 via-red-500 to-pink-500 sm:pl-3">Miami</span>
-          <span
-            class="bg-clip-text text-transparent bg-gradient-to-r from-yellow-400 via-red-500 to-pink-500 sm:pl-3">Paradise</span>
-          <span class="bg-clip-text sm:pl-3">Studio</span>
+          <span class="gradient-text-sunset sm:pl-3">Miami Paradise</span>
+          <span class="sm:pl-0">Studio</span>
         </a>
-
         <div class="flex w-1/2 justify-end content-center">
-          <a class="inline-block text-gray-300 no-underline hover:text-red-500 hover:text-underline text-center h-10 p-2 md:h-auto md:p-4 transform hover:scale-125 duration-300 ease-in-out"
-            href="https://github.com/Miami-Paradise-Studio" target="_blank">
+          <a class="inline-block text-gray-300 no-underline hover:text-red-500 hover:underline text-center h-10 p-2 md:h-auto md:p-4 transform hover:scale-125 duration-300"
+            href="https://github.com/" target="_blank">
             <svg class="fill-current h-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
               <path
-                d="M15,3C8.373,3,3,8.373,3,15c0,5.623,3.872,10.328,9.092,11.63C12.036,26.468,12,26.28,12,26.047v-2.051 c-0.487,0-1.303,0-1.508,0c-0.821,0-1.551-0.353-1.905-1.009c-0.393-0.729-0.461-1.844-1.435-2.526 c-0.289-0.227-0.069-0.486,0.264-0.451c0.615,0.174,1.125,0.596,1.605,1.222c0.478,0.627,0.703,0.769,1.596,0.769 c0.433,0,1.081-0.025,1.691-0.121c0.328-0.833,0.895-1.6,1.588-1.962c-3.996-0.411-5.903-2.399-5.903-5.098 c0-1.162,0.495-2.286,1.336-3.233C9.053,10.647,8.706,8.73,9.435,8c1.798,0,2.885,1.166,3.146,1.481C13.477,9.174,14.461,9,15.495,9 c1.036,0,2.024,0.174,2.922,0.483C18.675,9.17,19.763,8,21.565,8c0.732,0.731,0.381,2.656,0.102,3.594 c0.836,0.945,1.328,2.066,1.328,3.226c0,2.697-1.904,4.684-5.894,5.097C18.199,20.49,19,22.1,19,23.313v2.734 c0,0.104-0.023,0.179-0.035,0.268C23.641,24.676,27,20.236,27,15,C27,8.373,21.627,3,15,3z">
+                d="M15,3C8.373,3,3,8.373,3,15c0,5.623,3.872,10.328,9.092,11.63C12.036,26.468,12,26.28,12,26.047v-2.051 c-0.487,0-1.303,0-1.508,0c-0.821,0-1.551-0.353-1.905-1.009c-0.393-0.729-0.461-1.844-1.435-2.526 c-0.289-0.227-0.069-0.486,0.264-0.451c0.615,0.174,1.125,0.596,1.605,1.222c0.478,0.627,0.703,0.769,1.596,0.769 c0.433,0,1.081-0.025,1.691-0.121c0.328-0.833,0.895-1.6,1.588-1.962c-3.996-0.411-5.903-2.399-5.903-5.098 c0-1.162,0.495-2.286,1.336-3.233C9.053,10.647,8.706,8.73,9.435,8c1.798,0,2.885,1.166,3.146,1.481C13.477,9.174,14.461,9,15.495,9 c1.036,0,2.024,0.174,2.922,0.483C18.675,9.17,19.763,8,21.565,8c0.732,0.731,0.381,2.656,0.102,3.594 c0.836,0.945,1.328,2.066,1.328,3.226c0,2.697-1.904,4.684-5.894,5.097C18.199,20.49,19,22.1,19,23.313v2.734 c0,0.104-0.023,0.179-0.035,0.268C23.641,24.676,27,20.236,27,15C27,8.373,21.627,3,15,3z">
               </path>
             </svg>
           </a>
-          <a class="inline-block text-gray-300 no-underline hover:text-red-500 hover:text-underline text-center h-10 p-2 md:h-auto md:p-4 transform hover:scale-125 duration-300 ease-in-out"
+          <a class="inline-block text-gray-300 no-underline hover:text-red-500 hover:underline text-center h-10 p-2 md:h-auto md:p-4 transform hover:scale-125 duration-300"
             href="https://www.instagram.com/" target="_blank">
             <svg class="fill-current h-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
               <path
@@ -64,43 +89,48 @@
           </a>
         </div>
       </div>
-    </nav>
-  </header>
+    </div>
 
-  <main class="container pt-24 md:pt-36 mx-auto flex flex-wrap flex-col items-center">
-    <div class="flex flex-col w-full xl:w-2/5 justify-center lg:items-start overflow-y-hidden">
-      <h1 class="my-4 text-3xl md:text-5xl text-white opacity-90 font-bold leading-tight text-center md:text-left">
-        Our website is
-        <br>
-        <span class="bg-clip-text text-transparent bg-gradient-to-r from-yellow-400 via-red-500 to-pink-500">
-          COMING SOON
-        </span>
-        !
-      </h1>
-      <p class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left text-gray-200">
-        Currently we are working on our new website. Subscribe to get ready for the grand day.
-      </p>
-      <div class="bg-gray-800 opacity-95 w-full shadow-lg rounded-lg px-8 pt-6 pb-8 mb-4">
-        <form id="subscriptionForm" class="mb-4">
-          <label for="emailaddress" class="block text-yellow-300 py-2 font-bold mb-2">Subscribe to get notified!</label>
-          <input type="email" id="emailaddress" name="email"
-            class="shadow appearance-none border rounded w-full p-3 text-gray-700 leading-tight focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
-            placeholder="Enter Your Email" required>
-        </form>
-        <div class="flex items-center justify-between pt-4">
-          <button type="button" id="submitButton"
-            class="bg-gradient-to-r from-red-600 to-pink-500 hover:from-pink-500 hover:to-red-600 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out">Sign
-            Up</button>
+    <!-- Main Content -->
+    <div class="container pt-24 md:pt-36 mx-auto flex flex-wrap justify-center">
+      <div class="w-full xl:w-2/5 flex flex-col items-center">
+        <h1 class="my-4 text-5xl md:text-6xl text-white font-bold leading-tight text-center">
+          Our website is
+          <br>
+          <span class="gradient-text-sunset">COMING SOON</span>
+        </h1>
+        <p class="text-2xl md:text-3xl text-gray-200 text-center mb-8">Subscribe now for exclusive updates and be the
+          first to know about our upcoming website launch!
+        </p>
+        <div class="bg-gray-800 bg-opacity-95 w-full max-w-md mx-auto rounded-lg shadow-lg px-8 py-6 pt-0 mb-4">
+          <div class="mb-4">
+            <label for="emailaddress" class="block text-gray-800 font-bold mb-2">
+              Ester Egg! (not another bug)
+            </label>
+            <input id="emailaddress" name="email" type="email" placeholder="Enter your email"
+              class="subscribe-input shadow appearance-none border border-gray-700 rounded w-full py-3 px-4 text-gray-900 leading-tight focus:outline-none focus:ring-2 focus:ring-yellow-300 transition-transform duration-300 ease-in-out" />
+          </div>
+          <div class="flex items-center justify-center">
+            <button id="button" type="button"
+              class="subscribe-btn bg-gradient-to-r from-yellow-400 via-orange-500 to-pink-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-red-300 transition-transform duration-300 ease-in-out transform hover:scale-105">
+              Sign Up
+            </button>
+          </div>
+          <p class="text-xs text-gray-400 text-center mt-4">
+            We promise not to spam you.
+          </p>
+        </div>
+
+
+        <div id="responseMessage"
+          class="bg-green-500 opacity-0 text-white flex justify-center py-3 px-5 mb-2 md:mb-4 rounded-lg fixed -bottom-16 left-1/2 transform -translate-x-1/2 transition-all duration-500">
+          <span class="whitespace-nowrap">Subscribed! 🎉</span>
         </div>
       </div>
-      <div id="responseMessage"
-        class="bg-green-500 opacity-0 text-white flex justify-center py-3 px-5 mb-2 md:mb-4 rounded-lg fixed -bottom-16 left-1/2 transform -translate-x-1/2 transition-all duration-500">
-        <span class="whitespace-nowrap">Subscribed! 🎉</span>
-      </div>
     </div>
-  </main>
+  </div>
 
-  <script src="main.js" type="module"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
