--- a/index.html
+++ b/index.html
@@ -4,12 +4,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Miami Paradise Studio - AI-Driven Game Innovation & Lean Startup Excellence</title>
+  <title>Miami Paradise Studio | Revolutionizing Game Innovation with Uncompromising Agility</title>
   <meta name="description"
-    content="Join visionary entrepreneurs harnessing AI and Lean Startup methods to rapidly validate and scale next-gen digital games.">
-  <link rel="icon" type="image/webp" href="logo.webp">
-  <link rel="stylesheet" href="style.css">
+    content="Miami Paradise Studio redefines digital entertainment by fusing cutting-edge AI with Lean Startup methodologies. Our hyper-efficient, data-driven approach transforms visionary ideas into market-disruptive digital hits.">
+  <meta name="keywords"
+    content="game innovation, hit factory, Lean Startup, AI integration, agile development, scalable growth, digital transformation, market disruption, data-driven">
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title"
+    content="Miami Paradise Studio | Revolutionizing Game Innovation with Uncompromising Agility">
+  <meta property="og:description"
+    content="Harness advanced AI and rigorous Lean Startup strategies to transform breakthrough ideas into scalable digital successes. Discover how our relentless innovation delivers market-disruptive results.">
+  <meta property="og:image" content="logo.webp">
+  <meta property="og:url" content="https://example.com">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title"
+    content="Miami Paradise Studio | Revolutionizing Game Innovation with Uncompromising Agility">
+  <meta name="twitter:description"
+    content="Experience how our state-of-the-art AI and Lean Startup processes drive rapid market validation and scalable digital hits. Discover our visionary approach and high-impact strategy.">
+  <meta name="twitter:image" content="logo.webp">
+
+  <link rel="icon" type="image/webp" href="assets/images/logo.webp">
+  <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.12.0/tsparticles.bundle.min.js"></script>
+  <script src="assets/js/main.js" defer></script>
 </head>
 
 <body>
@@ -20,14 +41,14 @@
 
   <header class="site-header">
     <div class="logo-container">
-      <img src="logo.webp" alt="Miami Paradise Studio Logo" class="header-logo">
+      <img src="assets/images/logo.webp" alt="Miami Paradise Studio Logo" class="header-logo" width="55" height="55">
       <span class="site-title gradient-text-miami">Miami Paradise Studio</span>
     </div>
     <nav class="main-nav" role="navigation" aria-label="Main Navigation">
       <ul>
-        <li><a href="#about" class="nav-link">About Us</a></li>
-        <li><a href="#manifesto" class="nav-link">Our Methodology</a></li>
-        <li><a href="#subscribe" class="nav-link">Join Us</a></li>
+        <li><a href="about.html" class="nav-link">About Us</a></li>
+        <li><a href="methodology.html" class="nav-link">Our Methodology</a></li>
+        <li><a href="join.html" class="nav-link">Join Us</a></li>
       </ul>
     </nav>
     <button id="mobile-menu-button" class="mobile-menu-button" aria-label="Open menu" aria-expanded="false"
@@ -39,18 +60,26 @@
   <!-- Mobile Menu (hidden by default) -->
   <div id="mobile-menu" class="mobile-menu hidden" role="dialog" aria-modal="true" aria-labelledby="mobile-menu-title">
     <button id="close-mobile-menu" class="mobile-menu-close">&times;</button>
-    <a href="#about" class="mobile-menu-link">About Us</a>
-    <a href="#manifesto" class="mobile-menu-link">Our Methodology</a>
-    <a href="#subscribe" class="mobile-menu-link">Join Us</a>
+    <a href="about.html" class="mobile-menu-link">About Us</a>
+    <a href="methodology.html" class="mobile-menu-link">Our Methodology</a>
+    <a href="join.html" class="mobile-menu-link">Join Us</a>
     <div class="mobile-social-icons">
       <a href="https://x.com/szymonpalega" target="_blank" rel="noopener noreferrer" aria-label="X (formerly Twitter)"
-        class="social-icon-link"><i class="fab fa-x-twitter"></i></a>
+        class="social-icon-link">
+        <i class="fab fa-x-twitter"></i>
+      </a>
       <a href="https://reddit.com/r/yoursubreddit" target="_blank" rel="noopener noreferrer" aria-label="Reddit"
-        class="social-icon-link"><i class="fab fa-reddit-alien"></i></a>
+        class="social-icon-link">
+        <i class="fab fa-reddit-alien"></i>
+      </a>
       <a href="https://linkedin.com/company/yourcompany" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"
-        class="social-icon-link"><i class="fab fa-linkedin-in"></i></a>
+        class="social-icon-link">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
       <a href="https://discord.gg/your-invite-code" target="_blank" rel="noopener noreferrer" aria-label="Discord"
-        class="social-icon-link"><i class="fab fa-discord"></i></a>
+        class="social-icon-link">
+        <i class="fab fa-discord"></i>
+      </a>
     </div>
   </div>
 
@@ -59,21 +88,18 @@
     <!-- Hero Section -->
     <section class="section animated-element" aria-labelledby="hero-heading">
       <h1 id="hero-heading" class="hero-heading gradient-text-miami">
-        Two Visionaries Crafting the Future of Game Innovation 🚀
+        Revolutionizing Digital Entertainment Through Precision, Data, and Uncompromising Agility
       </h1>
       <p class="desc-text text-medium">
-        Welcome to Miami Paradise Studio – where groundbreaking ideas meet operational excellence. We are a duo of
-        visionary entrepreneurs redefining game development through rigorous Lean Startup methodologies. Our approach
-        leverages
-        rapid, data-driven Minimal Viable Experimentation (MVE) cycles powered by AI accelerators and optimal resource
-        management. Join us as we
-        architect, validate, and scale disruptive digital experiences.
+        Welcome to Miami Paradise Studio—where transformational innovation meets strategic execution. Our
+        hyper-efficient hit factory harnesses breakthrough AI and Lean Startup methodologies to convert visionary ideas
+        into disruptive, market-leading digital hits.
       </p>
     </section>
 
     <!-- About Us Section -->
     <section id="about" class="section-glass section animated-element" aria-labelledby="about-heading">
-      <h2 id="about-heading" class="section-title gradient-text-miami">🍹 About Us 🌴</h2>
+      <h2 id="about-heading" class="section-title gradient-text-miami">About Us</h2>
       <div class="about-content">
         <div class="creators-images">
           <img src="https://avatars.githubusercontent.com/u/101904119?v=4" alt="Founder Portrait" class="creator-image"
@@ -82,64 +108,61 @@
             class="creator-image" loading="lazy">
         </div>
         <p class="text-medium">
-          We are a team of seasoned entrepreneurs driving disruptive innovation in the interactive entertainment sector.
-          Our "Hit Factory" model
-          focuses on rapid market validation and agile scaling to build a sustainable portfolio of high-impact
-          intellectual property. By
-          leveraging cutting-edge AI, robust analytics, and creative insight, we transform every digital experience into
-          a strategic asset.
+          We are a nimble, two-person powerhouse that redefines game development with relentless rapid testing and
+          data-centric decision making. Our innovative approach fuses a “hit factory” model with proven Lean Startup
+          principles, empowering us to transform breakthrough concepts into scalable digital triumphs that captivate
+          both investors and audiences.
         </p>
       </div>
     </section>
 
     <!-- Our Methodology Section -->
-    <section id="manifesto" class="section-glass section animated-element" aria-labelledby="manifesto-heading">
-      <h2 id="manifesto-heading" class="section-title gradient-text-miami">🔬 The Lean Hit Factory 🧪</h2>
+    <section id="methodology" class="section-glass section animated-element" aria-labelledby="methodology-heading">
+      <h2 id="methodology-heading" class="section-title gradient-text-miami">Our Methodology</h2>
       <div class="features-grid">
         <article>
-          <h3 class="feature-title text-aqua">⚡ Accelerated Market Validation</h3>
+          <h3 class="feature-title text-aqua">Accelerated Market Validation</h3>
           <p class="text-medium">
-            We deploy streamlined 4‑week MVE cycles using agile Build‑Measure‑Learn frameworks. Rapid testing means
-            faster insights and immediate pivots – because in our world, speed is a competitive advantage.
+            Our rigorous 4‑week Build‑Measure‑Learn cycles rapidly prototype, test, and refine high-potential game
+            concepts—ensuring that every idea is meticulously validated before scaling.
           </p>
         </article>
         <article>
-          <h3 class="feature-title text-persian-rose">🤖 AI-Enhanced Production</h3>
+          <h3 class="feature-title text-persian-rose">AI-Enhanced Creative Acceleration</h3>
           <p class="text-medium">
-            Leveraging advanced AI tools, we expedite creative prototyping and asset generation while preserving
-            critical human oversight.
-            The result is a balanced fusion of innovation and efficiency.
+            Leveraging sophisticated AI tools, we expedite the creation of dynamic assets and prototypes, dramatically
+            reducing time to market while preserving unparalleled creative quality.
           </p>
         </article>
         <article>
-          <h3 class="feature-title text-aureolin">📊 Data-Driven Decision Making</h3>
+          <h3 class="feature-title text-aureolin">Data-Infused Precision</h3>
           <p class="text-medium">
-            Our strategic decisions are underpinned by hard analytics. By focusing on real-world user metrics, we ensure
-            that only empirically validated concepts receive investment for scale.
+            Every initiative is grounded in robust analytics and market intelligence, transforming raw potential into
+            proven performance through data-led decisions.
           </p>
         </article>
         <article>
-          <h3 class="feature-title text-veronica">♻️ Operational Efficiency</h3>
+          <h3 class="feature-title text-veronica">Operational Mastery</h3>
           <p class="text-medium">
-            With a lean team and agile resource reuse, complemented by smart outsourcing, we maximize ROI while
-            minimizing waste.
+            Our lean operations and intelligent resource management drive exceptional efficiency, enabling us to
+            consistently exceed market expectations while maximizing ROI.
           </p>
         </article>
       </div>
       <p>
-        And that's just the beginning—our comprehensive strategy spans meticulous execution, robust risk management, and
-        a visionary long-term roadmap.
+        This cohesive, high-impact methodology is the engine behind our success—integrating relentless innovation with
+        precise execution to deliver scalable, market-disruptive results.
       </p>
     </section>
 
-    <!-- Subscribe Section -->
-    <section id="subscribe" class="section-glass section animated-element" aria-labelledby="subscribe-heading">
-      <h2 id="subscribe-heading" class="section-title gradient-text-miami">🏄🏾‍♀️ Join Our Journey 🐬</h2>
+    <!-- Join Us Section -->
+    <section id="join" class="section-glass section animated-element" aria-labelledby="join-heading">
+      <h2 id="join-heading" class="section-title gradient-text-miami">Join Our Revolution</h2>
       <p class="text-medium">
-        Subscribe to receive exclusive updates on our AI-driven game development, early access to our Minimal Viable
-        Experiments, and insights into our disruptive strategies.
+        Subscribe now for exclusive insights on our pioneering projects, breakthrough strategies, and high-impact
+        innovations. Discover how our relentless drive and data-powered approach consistently transform disruptive ideas
+        into scalable successes—and become part of our exclusive network of visionary partners.
       </p>
-
       <form id="subscribe-form" class="form-container">
         <div class="form-row">
           <label for="emailaddress" class="sr-only">Email Address</label>
@@ -152,10 +175,8 @@
         </div>
         <div id="email-error" class="error-text" aria-live="assertive"></div>
       </form>
-
-      <!-- Success Message Container -->
       <div id="responseMessage" class="response-message" role="alert">
-        Thanks for subscribing! Your exclusive access is on its way.
+        Thank you for subscribing. Exclusive insights are on their way.
       </div>
     </section>
 
@@ -173,13 +194,13 @@
         class="social-icon-link"><i class="fab fa-discord"></i></a>
     </div>
     <p class="footer-text text-medium animated-element">
-      &copy; <span id="current-year"></span> Miami Paradise Studio. All Rights Reserved. Let's shape the future of
-      entertainment together.
+      &copy; <span id="current-year"></span> Miami Paradise Studio. All Rights Reserved. Together, we redefine the
+      future of digital entertainment.
     </p>
   </footer>
 
   <script>
-    // Set current year in footer
+    // Set the current year in the footer
     document.getElementById('current-year').textContent = new Date().getFullYear();
 
     // Mobile Menu Toggle Logic
@@ -205,7 +226,6 @@
       });
     });
   </script>
-  <script src="main.js"></script>
 </body>
 
 </html>
