refactor: enhance error handling and success message logic; improve mobile menu accessibility; update HTML for better SEO and clarity

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <title>Miami Paradise Studio | AI-Powered Game Innovation Lab</title>
 
   <meta name="description"
-    content="Miami Paradise Studio is a indie hit factory transforming game ideas into data-validated, AI-accelerated digital products. Discover our 4-week MVE cycles, smart reuse, and lean strategy for building standout IP." />
+    content="Miami Paradise Studio: AI-accelerated game lab building hits, not misses. We use rapid MVE cycles & data to validate ideas and de-risk investment." />
   <meta name="keywords"
     content="Miami Paradise Studio, AI games, indie game dev, MVE, lean startup for games, agile production, game validation, scalable prototypes, creative reuse, data-driven games, game IP" />
   <meta property="og:title" content="Miami Paradise Studio | AI-Powered Game Innovation Lab" />
   <meta property="og:description"
-    content="We build bold game ideas and test them with real players in just 4 weeks. Powered by AI, guided by data, scaled with intent." />
+    content="Miami Paradise Studio uses 4-week MVE sprints, AI smarts, and real player data to find and scale hit games. Less guesswork, more fun." />
   <meta property="og:image" content="assets/images/logo.webp" />
   <meta property="og:url" content="https://miamiparadise.studio" />
   <meta property="og:type" content="website" />
@@ -20,7 +20,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Miami Paradise Studio | AI-Powered Game Innovation Lab" />
   <meta name="twitter:description"
-    content="Every 4 weeks, we drop a testable prototype. If players love it, we scale it. If not, we learn fast and move on." />
+    content="Building game prototypes in 4 weeks? Check. Using AI & data to pick winners? Check. Making game dev smarter & more capital-efficient? That's Miami Paradise Studio." />
   <meta name="twitter:image" content="assets/images/logo.webp" />
 
   <link rel="icon" href="assets/images/logo.webp" type="image/webp" />
@@ -55,15 +55,15 @@
         <li><a href="#join" class="nav-link">Join</a></li>
       </ul>
     </nav>
-    <button id="mobile-menu-button" class="mobile-menu-button" aria-label="Open menu" aria-expanded="false"
-      aria-controls="mobile-menu">
+    <button id="mobile-menu-button" type="button" class="mobile-menu-button" aria-label="Open menu"
+      aria-expanded="false" aria-controls="mobile-menu">
       <i class="fas fa-bars" aria-hidden="true"></i>
     </button>
   </header>
 
   <div id="mobile-menu" class="mobile-menu hidden" role="dialog" aria-modal="true" aria-labelledby="mobile-menu-title">
     <span id="mobile-menu-title" class="sr-only">Mobile Navigation Menu</span>
-    <button id="close-mobile-menu" class="mobile-menu-close" aria-label="Close menu">&times;</button>
+    <button id="close-mobile-menu" type="button" class="mobile-menu-close" aria-label="Close menu">&times;</button>
     <a href="#about" class="mobile-menu-link">About</a>
     <a href="#methodology" class="mobile-menu-link">Method</a>
     <a href="#join" class="mobile-menu-link">Join</a>
@@ -75,97 +75,98 @@
         We’re not just making games<span class="sr-only">.</span> We’re reinventing how games are made 🚀
       </h1>
       <p class="desc-text text-medium">
-        Welcome to Miami Paradise Studio. We are a hyper-efficient AI-powered game lab transforming bold
-        ideas into playable prototypes every month.
-        Our mission is to discover and scale market-fit games with laser focus.
-        Through Minimum Viable Experiments we eliminate guesswork and prioritize real signals from real players.
-        If the data confirms potential<span class="sr-only">,</span> we invest. If not<span class="sr-only">,</span> we
-        adapt and move forward.
-        Inspired by Lean Startup principles and best practices from top companies<span class="sr-only">,</span> we are
-        building a repeatable
-        system for making games that are profitable and sustainable from the start.
+        Welcome to Miami Paradise Studio, where we replace game development guesswork with systematic validation. Our
+        unique 4-week Minimum Viable Experiment (MVE) cycle transforms promising ideas into prototypes tested by real
+        players. We
+        prioritize data over gut feelings, strategically investing only in IPs demonstrating genuine market potential.
+        This approach builds capital-efficient winners—faster and more affordably.
       </p>
-      <a href="#join" class="cta-btn">Get early access</a>
+      <a href="#join" class="cta-btn">Get Early Access</a>
     </section>
 
     <section id="about" class="section-glass section about-section" aria-labelledby="about-heading">
-      <h2 id="about-heading" class="section-title gradient-text-miami">🏄🏾‍♀️ Meet the Team 🐬</h2>
+      <h2 id="about-heading" class="section-title gradient-text-miami">🏄🏾‍♀️ Meet the Founders 🐬</h2>
       <div class="about-content">
         <div class="creators-images">
+
           <div class="creator-profile">
             <img src="https://avatars.githubusercontent.com/u/101904119?v=4"
-              alt="Simon Jedryczko, Founder & Game Designer" class="creator-image" loading="lazy" />
+              alt="Simon Jedryczko – Founder, AI Engineer & Business Strategist" class="creator-image" loading="lazy" />
             <div class="creator-name">Simon Jedryczko</div>
-            <div class="creator-role">Founder · Game Designer</div>
+            <div class="creator-role">
+              Founder & CEO · Chief Strategist · AI & Systems Architect · Head of Product & Innovation · Growth
+              Architect · Lead Prototyper
+            </div>
+            <div class="creator-bio">
+              Obsessed with efficiency, Simon blends AI/automation know-how with lean product thinking. He steers the
+              ship from idea through validation to smart scaling, focusing on real results and rapid execution. If it
+              ships and solves a problem, he's interested.
+            </div>
           </div>
+
           <div class="creator-profile">
             <img src="https://avatars.githubusercontent.com/u/101904119?v=4"
-              alt="Bart Glowacki, Co-Founder & AI Engineer" class="creator-image" loading="lazy" />
+              alt="Bart Glowacki – Co-Founder, Game Engineer & Technical Designer" class="creator-image"
+              loading="lazy" />
             <div class="creator-name">Bart Glowacki</div>
-            <div class="creator-role">Co-Founder · AI Engineer</div>
+            <div class="creator-role">
+              Co-Founder & CTO · Lead Game Engineer · Creative Director · Head of Game Design · Gameplay Director ·
+              Player Experience Lead
+            </div>
+            <div class="creator-bio">
+              Passionate about crafting silky-smooth player experiences, Bart is a full-stack game dev specializing in
+              core systems and technical design. He turns creative sparks into robust, scalable code, always focused on
+              that magic 'game feel' and market sense.
+            </div>
           </div>
         </div>
-        <p class="text-medium about-desc">
-          We prototype, test, and launch in tight, focused cycles — blending creativity with smart systems and
-          strategic
-          use of AI.
-          Our compact team thrives on fast feedback, bold ideas, and sharp execution.
-          Every project is an experiment. Every release is a learning opportunity.
-          We're here to build a portfolio of market-validated, scalable games — and to prove that two people can move
-          faster than most teams ten times our size.
-          Whether you're a fellow creator, a curious player, or a potential partner, you're invited to be part of the
-          journey.
-        </p>
       </div>
     </section>
 
-
     <section id="methodology" class="section-glass section methodology-section" aria-labelledby="methodology-heading">
-      <h2 id="methodology-heading" class="section-title gradient-text-miami">🧪 How It Actually Works 🔬</h2>
+      <h2 id="methodology-heading" class="section-title gradient-text-miami">🧪 The MPS Innovation Engine 🔬</h2>
       <div class="features-grid">
         <article aria-labelledby="feature-title-1">
-          <h3 id="feature-title-1" class="feature-title text-aqua">🌀 4-Week Product Loops</h3>
+          <h3 id="feature-title-1" class="feature-title text-aqua">🌀 4-Week Idea-to-Market Sprints</h3>
           <p class="text-medium">
-            We turn bold ideas into working prototypes in just four weeks. Build fast. Launch early. Listen to the
-            market.
-            If players show interest, we go deeper. If not, we take the lessons and move forward with more clarity.
+            We don't wait around. Bold ideas become testable prototypes in just 4 weeks. This rapid feedback loop tells
+            us what players *actually* want, slashing risk before we commit big.
           </p>
         </article>
         <article aria-labelledby="feature-title-2">
-          <h3 id="feature-title-2" class="feature-title text-persian-rose">🤖 AI Assisted, Human Led</h3>
+          <h3 id="feature-title-2" class="feature-title text-persian-rose">🤖 AI Supercharges Production</h3>
           <p class="text-medium">
-            We use AI to speed up ideation, content, and development. But every asset, feature, and decision is
-            reviewed
-            by human hands with creative intent. AI supports. We decide.
+            Our custom AI tools boost creativity and speed up asset creation – think faster, build faster. Humans steer
+            the ship for quality and vision, giving us a serious (and cost-effective) edge.
           </p>
         </article>
         <article aria-labelledby="feature-title-3">
-          <h3 id="feature-title-3" class="feature-title text-aureolin">♻️ Reuse by Design</h3>
+          <h3 id="feature-title-3" class="feature-title text-aureolin">♻️ Build Once, Reuse Everywhere</h3>
           <p class="text-medium">
-            Our internal library grows with every experiment. We design systems and assets to be modular and reusable.
-            It saves time and multiplies output across projects.
+            Nothing goes to waste. Every experiment feeds our internal library of smart, reusable code and assets. This
+            compounding effect saves massive time and money across all projects. Smart, right?
           </p>
         </article>
         <article aria-labelledby="feature-title-4">
-          <h3 id="feature-title-4" class="feature-title text-veronica">📊 Data Over Opinions</h3>
+          <h3 id="feature-title-4" class="feature-title text-veronica">📊 Data, Not Drama</h3>
           <p class="text-medium">
-            We do not guess. We track, measure, and analyze. Real player behavior tells us what works. We ignore noise
-            and double down on signal.
+            Opinions are great, but data is king. We track player behavior relentlessly from day one. Hard numbers
+            (KPIs) decide where resources go – only validated ideas get the green light.
           </p>
         </article>
         <article aria-labelledby="feature-title-5">
-          <h3 id="feature-title-5" class="feature-title">🌱 Learn Fast, Evolve Constantly</h3>
+          <h3 id="feature-title-5" class="feature-title text-aqua">🌱 Always Learning, Always Improving</h3>
           <p class="text-medium">
-            Every test gives us insight. We document what works, what fails, and why. Knowledge compounds and each
-            cycle
-            builds a stronger foundation.
+            Every sprint is a lesson learned, documented, and baked into our process. This constant refinement loop
+            builds valuable know-how and makes our whole operation smarter over time.
           </p>
         </article>
         <article aria-labelledby="feature-title-6">
-          <h3 id="feature-title-6" class="feature-title">🚀 Scale With Strategy</h3>
+          <h3 id="feature-title-6" class="feature-title text-persian-rose">🚀 Scaling the Winners, Smartly</h3>
           <p class="text-medium">
-            If a prototype shows promise, we invest with intent. We grow it using structured plans, smart outsourcing,
-            and lessons from industries like SaaS and fintech. Success is not luck. It is a process.
+            When a prototype crushes its metrics, we initiate a structured scaling phase. Leveraging lean tactics and
+            strategic outsourcing partnerships, we efficiently transition validated concepts towards market growth,
+            allowing our core team to maintain focus on the next wave of innovation.
           </p>
         </article>
       </div>
@@ -197,6 +198,7 @@
 
     <footer class="site-footer">
       <div class="footer-social" aria-label="Social media links">
+        <!-- TODO: Replace # with actual social media profile URLs -->
         <a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link"
           aria-label="Visit our X profile"><i class="fab fa-x-twitter" aria-hidden="true"></i></a>
         <a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link"
@@ -207,7 +209,7 @@
           aria-label="Join our Discord server"><i class="fab fa-discord" aria-hidden="true"></i></a>
       </div>
       <p class="footer-text text-medium">
-        &copy; <span id="current-year"></span> Miami Paradise Studio. Smart, lean, and designed to last.
+        &copy; <span id="current-year"></span> Miami Paradise Studio. Engineering Scalable Entertainment.
       </p>
     </footer>
 
