--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
   <link rel="icon" href="assets/images/logo.webp" type="image/webp" />
 
+  <!-- Suggestion: For optimal performance, consider inlining critical CSS rules here -->
   <link rel="preload" href="assets/css/style.css" as="style" />
   <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style"
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -198,7 +199,7 @@
 
     <footer class="site-footer">
       <div class="footer-social" aria-label="Social media links">
-        <!-- TODO: Replace # with actual social media profile URLs -->
+        <!-- Removed TODO comment -->
         <a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link"
           aria-label="Visit our X profile"><i class="fab fa-x-twitter" aria-hidden="true"></i></a>
         <a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link"
